--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -37,6 +37,14 @@
   cursor: pointer;
 }
 
+.hamburger {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin: 5px 0;
+  transition: all 0.3s ease;
+}
+
 /* Móvil */
 @media (max-width: 768px) {
   .menu-toggle {
