--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -32,14 +32,26 @@
 }
 
 /* EMPRESA */
+.footer-company {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .footer-company p {
     margin: 5px 0;
 }
 
+
 /* CONTACTO */
+.footer-contact{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .footer-contact p {
     margin: 5px 0;
 }
+
 
 /* ZONA INFERIOR */
 .footer-legal {
@@ -79,7 +91,7 @@
     filter: invert(100%) sepia(100%) grayscale(100%) brightness(200%);
 }
 
-/* RESPONSIVE */
+/* RESPONSIVE MOVIL*/
 @media (max-width: 768px) {
     .footer-top {
         grid-template-columns: 1fr;
@@ -88,5 +100,7 @@
     .gallery-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+    
 }
+
 
