--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -43,10 +43,10 @@
   cursor: pointer;
 }
 
-.hamburger {
+.hamburger-menu {
   width: 25px;
   height: 3px;
-  background-color: #fff;
+
   margin: 5px 0;
   transition: all 0.3s ease;
 }
@@ -57,7 +57,12 @@
     display: block;
   }
 
-  
+  .hamburger-menu {
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+  }
+
   .nav-menu {
     position: absolute;
     top: 70px;
