--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -7,6 +7,16 @@
     margin-bottom: 10px;
 }
 
+.search-input {
+    width: 100%;
+    max-width: 400px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    border: 2px solid #ccc;
+    font-size: 14px;
+}
+
 .image-box {
     display: flex;
     flex-wrap: wrap;
